# RLSDK-Python

./: .gitignore  README.md  process_event_hook.js  pyproject.toml  requirement.txt  sdk.py  test.py
rlsdk_python/: __init__.py  event_handling.py  events.py  frida_script.py  game_objects.py  sdk.py
