[tool.poetry]
name = "rlsdk_python"
version = "0.3.0"
description = ""
authors = ["MarlburroW <nik0o@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
frida = "^16.2.1"
Pymem = "^1.13.1"
colorama = "^0.4.6"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
